--- a/constants-config.json
+++ b/constants-config.json
@@ -1,6 +1,6 @@
 {
-	"database-id": "169b6e632b7448529120599281265ac5",
-	"author": "",
+	"database-id": "1d4e5f5c54a7808f8ee4e0d95413d747",
+	"author": "Nirav Shenoy",
 	"tracking": {
 		"google-analytics": {
 			"use-ga": true,
@@ -15,8 +15,8 @@
 	},
 	"google-search-console-html-tag": "",
 	"socials": {
-		"email": "",
-		"github": "",
+		"email": "niravshenoy16@gmail.com",
+		"github": "https://github.com/niravShenoy",
 		"googlescholar": "",
 		"semanticscholar": "",
 		"dblp": "",
@@ -30,12 +30,12 @@
 		"calendar": "",
 		"kofi": "",
 		"buy-me-a-coffee": "",
-		"this-github-repo": "https://github.com/nerdymomocat-templates/webtrotion-astro-notion-cms-website-blog"
+		"this-github-repo": ""
 	},
 	"custom-domain": "",
 	"base-path": "",
 	"giscus": {
-		"data-repo": "nerdymomocat-templates/webtrotion-astro-notion-cms-website-blog",
+		"data-repo": "",
 		"data-repo-id": "R_kgDOK0FuUA",
 		"data-category": "Announcements",
 		"data-category-id": "DIC_kwDOK0FuUM4CbZ5A",
