Update constants-config.json #2

--- a/constants-config.json
+++ b/constants-config.json
@@ -30,7 +30,7 @@
 		"calendar": "",
 		"kofi": "",
 		"buy-me-a-coffee": "",
-		"this-github-repo": ""
+		"this-github-repo": "https://github.com/niravShenoy/niravshenoy.github.io"
 	},
 	"custom-domain": "",
 	"base-path": "",
